--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -20,4 +20,5 @@ RUN git clone https://github.com/bachns/pkcs11-proxy && \
 COPY test.psk /root/test.psk
 
 ENV PKCS11_PROXY_TLS_PSK_FILE="/root/test.psk"
-ENV PKCS11_PROXY_SOCKET="tls://localhost:5657"
+ENV PKCS11_PROXY_SOCKET="tls://softhsm-server:2345"
+
