--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -27,11 +27,11 @@ RUN git clone https://github.com/SUNET/pkcs11-proxy && \
     cd pkcs11-proxy && cmake . && make && make install
 
 
-COPY test.psk /root/test.psk
+COPY tlskey.psk /root/tlskey.psk
 
 
 EXPOSE 2345
 ENV PKCS11_DAEMON_SOCKET="tls://0.0.0.0:2345"
-ENV PKCS11_PROXY_TLS_PSK_FILE="/root/test.psk"
+ENV PKCS11_PROXY_TLS_PSK_FILE="/root/tlskey.psk"
 CMD [ "/usr/local/bin/pkcs11-daemon", "/usr/local/lib/softhsm/libsofthsm2.so" ]
 
